--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   </head>
   <body>
     <div class="container"></div>
+    <div class="header-container">
+				<header>
+		        	<div class="container">
+		            <div class="row">
+		                <div class="col-lg-12">
+		                    <img class="img-responsive" src="style/assets/Header.jpg" alt=""/>
+		                   
+		                </div>
+		            </div>
+		            </div>
+	            </header>
+        	</div>
   </body>
   <script src="/bundle.js"></script>
 </html>
