moved search bar to overlay in header image

--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/style/style.css">
+   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-  
+   <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/style/style.css">
    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
 ...
    
   </head>
   <body>
     <div class="container"></div>
-    <div class="header-container">
-				<header>
-		        	<div class="container">
-		            <div class="row">
-		                <div class="col-lg-12">
-		                    <img class="img-responsive" src="style/assets/Header.jpg" alt=""/>
-		                   
-		                </div>
-		            </div>
-		            </div>
-	            </header>
-        	</div>
   </body>
   <script src="/bundle.js"></script>
 </html>
