--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/style/style.css">
    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFe83EzC6YWd0hiaM5pu2pYBGCwcvbuwE"></script>
 ...
    
   </head>
